Fixed flex-wrap issue

--- a/app/css/util.css
+++ b/app/css/util.css
@@ -16,13 +16,15 @@
   display: block;
 }
 
-.columns {
-  display: flex;
-  flex-wrap: wrap;
-}
+@media (min-width: 1000px) {
+  .columns {
+    display: flex;
+    flex-wrap: wrap;
+  }
 
-.column {
-  flex: 0 0 50%;
+  .column {
+    flex: 1;
+  }
 }
 
 .columns > .column {
